// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stage-actions > renders basic stage actions 1`] = `
"
<form method="POST" action="/cases/123/stage/outcome">
    <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Decision
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="actionCode" name="actionCode" type="radio" value="approve">
      <label class="govuk-label govuk-radios__label" for="actionCode">
        Approve
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="actionCode-2" name="actionCode" type="radio" value="reject">
      <label class="govuk-label govuk-radios__label" for="actionCode-2">
        Reject
      </label>
    </div>
  </div>
</fieldset>
</div>

    <button type="submit" class="govuk-button" data-module="govuk-button">
  Save
</button>
</form>
"
`;

exports[`stage-actions > renders multiple actions with mixed conditionals 1`] = `
"
<form method="POST" action="/cases/mixed-123/stage/outcome">
    <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    What do you want to do?
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="actionCode" name="actionCode" type="radio" value="approve" data-aria-controls="conditional-actionCode">
      <label class="govuk-label govuk-radios__label" for="actionCode">
        Approve
      </label>
    </div>
    <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-actionCode">
      <div class="govuk-form-group">
  <label class="govuk-label" for="approve-comment">
    Approval notes
  </label>
  <textarea class="govuk-textarea" id="approve-comment" name="approve-comment" rows="3"></textarea>
</div>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="actionCode-2" name="actionCode" type="radio" value="on-hold" checked data-aria-controls="conditional-actionCode-2">
      <label class="govuk-label govuk-radios__label" for="actionCode-2">
        Put on hold
      </label>
    </div>
    <div class="govuk-radios__conditional" id="conditional-actionCode-2">
      <div class="govuk-form-group">
  <label class="govuk-label" for="on-hold-comment">
    Reason for hold
  </label>
  <div id="on-hold-comment-hint" class="govuk-hint">
    Optional notes
  </div>
  <textarea class="govuk-textarea" id="on-hold-comment" name="on-hold-comment" rows="2" aria-describedby="on-hold-comment-hint">Waiting for more information</textarea>
</div>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="actionCode-3" name="actionCode" type="radio" value="reject">
      <label class="govuk-label govuk-radios__label" for="actionCode-3">
        Reject
      </label>
    </div>
  </div>
</fieldset>
</div>

    <button type="submit" class="govuk-button" data-module="govuk-button">
  Save
</button>
</form>
"
`;

exports[`stage-actions > renders stage actions with conditional textarea 1`] = `
"
<form method="POST" action="/cases/456/stage/outcome">
    <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Decision
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="actionCode" name="actionCode" type="radio" value="approve" checked data-aria-controls="conditional-actionCode">
      <label class="govuk-label govuk-radios__label" for="actionCode">
        Approve
      </label>
    </div>
    <div class="govuk-radios__conditional" id="conditional-actionCode">
      <div class="govuk-form-group">
  <label class="govuk-label" for="approve-comment">
    Approval reason
  </label>
  <div id="approve-comment-hint" class="govuk-hint">
    Please provide a reason
  </div>
  <textarea class="govuk-textarea" id="approve-comment" name="approve-comment" rows="3" aria-describedby="approve-comment-hint">This looks good</textarea>
</div>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="actionCode-2" name="actionCode" type="radio" value="reject">
      <label class="govuk-label govuk-radios__label" for="actionCode-2">
        Reject
      </label>
    </div>
  </div>
</fieldset>
</div>

    <button type="submit" class="govuk-button" data-module="govuk-button">
  Save
</button>
</form>
"
`;

exports[`stage-actions > renders with error message 1`] = `
"
<form method="POST" action="/cases/789/stage/outcome">


    <button value="approve" type="submit" name="actionCode" class="govuk-button" data-module="govuk-button">
  Approve
</button>
</form>
"
`;

exports[`stage-actions > renders with save button disabled 1`] = `
"
<form method="POST" action="/cases/999/stage/outcome">


    <button value="approve" type="submit" name="actionCode" disabled aria-disabled="true" class="govuk-button" data-module="govuk-button">
  Approve
</button>
</form>
"
`;

exports[`stage-actions > renders with textarea error 1`] = `
"
<form method="POST" action="/cases/error-case/stage/outcome">

      <div class="govuk-form-group govuk-form-group--error">
  <label class="govuk-label" for="approve-comment">
    Approval reason
  </label>
  <p id="approve-comment-error" class="govuk-error-message">
    <span class="govuk-visually-hidden">Error:</span> Approval reason is required
  </p>
  <textarea class="govuk-textarea govuk-textarea--error" id="approve-comment" name="approve-comment" rows="3" aria-describedby="approve-comment-error"></textarea>
</div>


    <button value="approve" type="submit" name="actionCode" class="govuk-button" data-module="govuk-button">
  Approve
</button>
</form>
"
`;
